--- a/CarruselFotos/index.html
+++ b/CarruselFotos/index.html
@@ -17,6 +17,7 @@
         <div class="puntos">
         </div>
     </div>
+    <p>Cambios para comprobar ;)</p>
     <script src="js.js"></script>
 </body>
 </html>
