--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p>Prueba inicial</p>
+    <div id="botones" class="botones"></div>
 </body>
 <script src="js.js"></script>
 </html>
