--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Prueba inicial</p>
+    <h1>Páginas web HTML</h1>
+    <h2>Pedro Monreal Sánchez</h2>
+    <br><br>
     <div id="botones" class="botones"></div>
 </body>
 <script src="js.js"></script>
