--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="INDEX/estilo.css">
+    <link rel="icon" href="INDEX/favicon.ico" type="image/x-icon">
+
+    <title>Páginas web HTML</title>
 </head>
 <body>
     <h1>Páginas web HTML</h1>
@@ -12,5 +14,5 @@
     <br><br>
     <div id="botones" class="botones"></div>
 </body>
-<script src="js.js"></script>
+<script src="INDEX/js.js"></script>
 </html>
