Mejora de web index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <h1>Páginas web HTML</h1>
     <h2>Pedro Monreal Sánchez</h2>
-    <br><br>
+    <p id="descripcion" class="descripcion"></p>
+    <div class="contenedor_carrusel" id="contenedorcarrusel"></div>
     <div id="botones" class="botones"></div>
 </body>
 <script src="INDEX/js.js"></script>
