--- a/Documentos/INDEX/index.html
+++ b/Documentos/INDEX/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="INDEX/estilo.css">
-    <link rel="icon" href="INDEX/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <title>Páginas web HTML</title>
 </head>
@@ -16,5 +16,5 @@
     <div id="botones" class="botones"></div>
     
 </body>
-<script src="INDEX/js.js"></script>
+<script src="js.js"></script>
 </html>
