--- a/Documentos/CarruselFotos/index.html
+++ b/Documentos/CarruselFotos/index.html
@@ -8,6 +8,7 @@
     <title>Carrusel de fotos</title>
 </head>
 <body>
+    <p>Carrusel de fotos con JavaScript</p>
     <div class="contenedor_carrusel">
         <h1 class="numero" id="numero"></h1>
         <button id="bot" type="button" class="boton1" onclick="cambiarfoto(-1)"> <i class="fa-solid fa-arrow-left"></i> </button>
