--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Páginas web HTML</title>
 </head>
 <body>
+    <nav class="navbar">
+          <a href=" ">Inicio</a>
+        
+        </nav>
+
     <h1>Páginas web HTML</h1>
     <h2>Pedro Monreal Sánchez</h2>
     <p id="descripcion" class="descripcion"></p>
