--- a/Documentos/CarruselFotos/index.html
+++ b/Documentos/CarruselFotos/index.html
@@ -8,6 +8,9 @@
     <title>Carrusel de fotos</title>
 </head>
 <body>
+        <nav class="navbar">
+        <a href="/index.html">Inicio</a>
+      </nav>
     <p>Carrusel de fotos con JavaScript</p>
     <div class="contenedor_carrusel">
         <h1 class="numero" id="numero"></h1>
