--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <nav class="navbar">
-          <a href=" ">Inicio</a>
-        
+          <a href="/index.html">Inicio</a>
         </nav>
 
     <h1>Páginas web HTML</h1>
