--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Documentos/INDEX/estilo.css">
-    <link rel="icon" href="/Documentos/INDEX/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../Documentos/INDEX/estilo.css">
+    <link rel="icon" href="../Documentos/INDEX/favicon.ico" type="image/x-icon">
 
     <title>Páginas web HTML</title>
 </head>
 <body>
-    <nav class="navbar">
-          <a href="/index.html">Inicio</a>
-        </nav>
-
     <h1>Páginas web HTML</h1>
     <h2>Pedro Monreal Sánchez</h2>
     <p id="descripcion" class="descripcion"></p>
@@ -20,5 +16,5 @@
     <div id="botones" class="botones"></div>
     
 </body>
-<script src="/Documentos/INDEX/js.js"></script>
+<script src="../Documentos/INDEX/js.js"></script>
 </html>
