--- a/Documentos/APIValorant/Mapas/index.html
+++ b/Documentos/APIValorant/Mapas/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Valorant</title>
+    <title>Mapas</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="css.css">
     <link href="https://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
-
 </head>
 <body>
-    <h1>API Valorant</h1>
-    <div id="div"></div>
-    <br>
-    <br>
+    <nav>
+        <a href="../index.html">Inicio</a>
+        <a href="../Agentes/index.html">Agentes</a>
+        <a href="../Artilugios_belicos/index.html">Artilugios bélicos</a>
+        <a class ="fuente" href="https://dash.valorant-api.com/">Fuente</a>
 
+    </nav>
+
+    <h1 class="titulo1">mapas VALORANT</h1>
+    <div id="div"></div>
 </body>
 <script src="js.js"></script>
 </html>
