--- a/Documentos/APIValorant/index.html
+++ b/Documentos/APIValorant/index.html
@@ -7,14 +7,15 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="css.css">
     <link href="https://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
-
 </head>
 <body>
     <h1>API Valorant</h1>
     <div id="div"></div>
     <br>
     <br>
-
+<footer>
+    <h2>Pedro Monreal Sanchez</h2>
+</footer>
 </body>
 <script src="js.js"></script>
 </html>
