--- a/Documentos/APIValorant/Artilugios_belicos/index.html
+++ b/Documentos/APIValorant/Artilugios_belicos/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artilugios Bélicos</title>
-
+    <title>API Valorant</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="css.css">
     <link href="https://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
@@ -14,11 +13,12 @@
         <a href="../index.html">Inicio</a>
         <a href="../Agentes/index.html">Agentes</a>
         <a href="../Mapas/index.html">Mapas</a>
+
         <a class ="fuente" href="https://dash.valorant-api.com/">Fuente</a>
 
     </nav>
 
-    <h1 class="titulo1">mapas VALORANT</h1>
+    <h1>Artilugios Belicos</h1>
     <div id="div"></div>
 </body>
 <script src="js.js"></script>
