--- a/Documentos/APIValorant/Artilugios_belicos/index.html
+++ b/Documentos/APIValorant/Artilugios_belicos/index.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Valorant</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="css.css">
     <link href="https://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f25d71746c.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <nav>
         <a href="../index.html">Inicio</a>
         <a href="../Agentes/index.html">Agentes</a>
         <a href="../Mapas/index.html">Mapas</a>
-
         <a class ="fuente" href="https://dash.valorant-api.com/">Fuente</a>
 
     </nav>
+    
+    <h1 class="titulo1">Personajes VALORANT</h1>
+    <h2 class="titulo2">Usando API</h1>
 
-    <h1>Artilugios Belicos</h1>
     <div id="div"></div>
+    <h1 class="nombre">Pedro Monreal Sanchez</h1>
 </body>
 <script src="js.js"></script>
 </html>
