--- a/Documentos/ODS/Inicio/principal.html
+++ b/Documentos/ODS/Inicio/principal.html
@@ -16,7 +16,7 @@
           <img src="imagenes/ODS.png" alt="Imagen" class="navbar-image">
         </div>
         <div class="navbar-right">
-          <a href="../inicio/principal.html">Inicio</a>
+          <a href="../Inicio/principal.html">Inicio</a>
           <a href="https://www.un.org/sustainabledevelopment/es/objetivos-de-desarrollo-sostenible/">Acerca de ODS</a>
         </div>
       </nav>
