--- a/Documentos/ODS/Inicio/principal.html
+++ b/Documentos/ODS/Inicio/principal.html
@@ -13,7 +13,7 @@
   
     <nav class="navbar">
         <div class="navbar-left">
-          <img src="imagenes/ODS.png" alt="Imagen" class="navbar-image">
+          <img src="Imagenes/ODS.png" alt="Imagen" class="navbar-image">
         </div>
         <div class="navbar-right">
           <a href="../Inicio/principal.html">Inicio</a>
