--- a/Documentos/ODS/Inicio/principal.html
+++ b/Documentos/ODS/Inicio/principal.html
@@ -27,7 +27,7 @@
 
       <div class="content">
         <div class="main">
-          <img src="imagenes/ODS_GRANDE.png" alt="Imagen" class="main-image">
+          <img src="Imagenes/ODS_GRANDE.png" alt="Imagen" class="main-image">
           <div class="main-text">
             <h1 class="ponteaprueba">PONTE A PRUEBA</h1>
             <div class="Texto"> 
