--- a/Documentos/ODS/Inicio/principal.html
+++ b/Documentos/ODS/Inicio/principal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GREEN GYM</title>
+    <title>Cuestionario ODS</title>
     <link rel="shortcut icon" href="imagenes/favicon.ico" type="image/ico">
     <link rel="stylesheet" href="principal.css">
     <script src="https://kit.fontawesome.com/f25d71746c.js" crossorigin="anonymous"></script>
