--- a/Documentos/APIFutbol/index.html
+++ b/Documentos/APIFutbol/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css.css">
     <script src="https://kit.fontawesome.com/f25d71746c.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 </head>
 <body>
