--- a/Documentos/APIFutbol/index.html
+++ b/Documentos/APIFutbol/index.html
@@ -24,7 +24,21 @@
     <h1>API Futbol Español</h1>
     <img src="https://cdn.cookielaw.org/logos/f99d5762-5a8e-4e1e-b9e9-e5c54ec8ea01/ad294791-9034-442d-ab46-e1d94e100d71/629b7af6-84a6-4437-ae29-fefaefb3f5d2/RGB_Logotipo_LALIGA_coral.png">
 </div>
-</body>
+
+<div id="Inicio" class="inicio"> 
+    <div class="inicioIndividual">
+        <button onclick="botonEquipos()">EQUIPOS</button>
+    </div>
+
+    <div class="inicioIndividual">
+        <button onclick="botonJugadores()">JUGADORES</button>
+
+
+
+</div>
+<section id="datos"></section>
 <div id="div"></div>
+
+</body>
 <script src=js.js></script>
 </html>
